--- a/style.css
+++ b/style.css
@@ -1,142 +1,149 @@
-*{
-    margin:0;
-    padding:0;
+* {
+  margin: 0;
+  padding: 0;
 }
-.hidden{
-    display:none;
+.hidden {
+  display: none;
 }
 
 /* Main layout */
-@media only screen and (min-width:320px){
-    #navbar{
+@media only screen and (min-width: 320px) {
+  #navbar {
     font-family: Merriweather, sans-serif;
     text-align: center;
-    background:rgba(230, 228, 228, 0.411);
-    border:1px solid black;
-    }
-    body{
+    background: rgba(230, 228, 228, 0.411);
+    border: 1px solid black;
+  }
+  body {
     background-image: url(./images/largemovies2.jpg);
     background-position: cover;
-    }
-    .counter{
-        font-size:1.1em;
-        font-family: Roboto, sans-serif;
-    }
-    .container{
-        height:150px;
-    }
-    #js-startScreen, #js-right, #js-wrong, #js-finalScore, #js-questionsForm{
-        margin-top:6em;
-    }
-    #js-startScreen .container{
-        display:flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    #navbar section{
-        display: flex;
-        justify-content: space-between;
-        margin-bottom: 1em;
-    }
-    .counter{
-        margin-left:1em;
-        margin-right:1em;
-    }
-    #js-questionsForm{
-        background:rgba(176, 193, 211, 0.650);
-        border-radius: 3%;
-    }
-    #js-questionsForm legend{
-        font-weight: 600;
-        font-family: roboto slab, sans-serif;
-        font-size:1.1em;
-        text-align: center;
-    }
-    #questionCont {
-        text-align: center;
-        margin:1em 0 1em 0;
-    }
-    #questionCont label{
-    font-family: roboto,sans-serif;
+    background-size: cover;
+  }
+  .counter {
+    font-size: 1.1em;
+    font-family: Roboto, sans-serif;
+  }
+  .container {
+    height: 150px;
+  }
+  #js-startScreen,
+  #js-right,
+  #js-wrong,
+  #js-finalScore,
+  #js-questionsForm {
+    margin-top: 6em;
+  }
+  #js-startScreen .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  #navbar section {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 1em;
+  }
+  .counter {
+    margin-left: 1em;
+    margin-right: 1em;
+  }
+  #js-questionsForm {
+    background: rgba(176, 193, 211, 0.65);
+    border-radius: 3%;
+  }
+  #js-questionsForm legend {
+    font-weight: 600;
+    font-family: roboto slab, sans-serif;
+    font-size: 1.1em;
+    text-align: center;
+  }
+  #questionCont {
+    text-align: center;
+    margin: 1em 0 1em 0;
+  }
+  #questionCont label {
+    font-family: roboto, sans-serif;
     font-size: 1em;
     font-weight: 600;
-    }
-    #questionCont input{
-        margin:2em 0 0 0;
-    }
-    #js-wrong{
-    border:2px solid red;
-    background:rgba(243, 173, 184, 0.650);
-    }
-    #js-wrong h2{
-        font-size:1.2em;
-        margin-bottom:1em;
-    }
-     #js-wrong p{
-        font-size: 1.1em;
-    }
-    #js-right{
-    border:2px solid green;
-    background: rgba(133, 218, 133, 0.650);
-    
-    }
-    #js-finalScore, #js-startScreen{
-   border: 2px solid Black;
-   background:rgba(159, 171, 240, 0.650);
-   
-    }
-    #js-finalScore h2{
-        font-size:1.2em;
-        margin-bottom:1em;
-    }
-    .container{
-        font-family: lato sans-serif;
-        font-weight:400;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding:5%;
-    }
-    button{
-         font-family: lato,sans-serif;
-        font-size: 1em;
-        font-weight: bold;
-        margin-top:2em;
-        width:6em;
-        height:2em;
-        border-radius: 2%;
-    }
-    p{
+  }
+  #questionCont input {
+    margin: 2em 0 0 0;
+  }
+  #js-wrong {
+    border: 2px solid red;
+    background: rgba(243, 173, 184, 0.65);
+  }
+  #js-wrong h2 {
+    font-size: 1.2em;
+    margin-bottom: 1em;
+  }
+  #js-wrong p {
+    font-size: 1.1em;
+  }
+  #js-right {
+    border: 2px solid green;
+    background: rgba(133, 218, 133, 0.65);
+  }
+  #js-finalScore,
+  #js-startScreen {
+    border: 2px solid Black;
+    background: rgba(159, 171, 240, 0.65);
+  }
+  #js-finalScore h2 {
+    font-size: 1.2em;
+    margin-bottom: 1em;
+  }
+  .container {
+    font-family: lato sans-serif;
+    font-weight: 400;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 5%;
+  }
+  button {
+    font-family: lato, sans-serif;
+    font-size: 1em;
+    font-weight: bold;
+    margin-top: 2em;
+    width: 6em;
+    height: 2em;
+    border-radius: 2%;
+  }
+  p {
     font-weight: 600;
-    }
+  }
 }
 
-@media only screen and (min-width:700px){
-
-    #js-right, #js-wrong, #js-startScreen, #js-finalScore, #js-questionsForm{
-        width:70%;
-        margin-left:auto;
-        margin-right:auto;
-    }
-    .counter{
-        font-size:1.4em;
-    }
-    #js-wrong h2{
-        font-size:1.4em;
-    }
-    #js-wrong p{
-        font-size: 1.4em;
-    }
-    #js-finalScore h2{
-        font-size:1.4em;
-    }
-    #js-finalScore p{
-        font-size: 1.4em;
-    }
-    #js-questionsForm legend{
-        font-size: 1.3em;
-    }
-    #questionCont label{
-        font-size: 1.3em;
-    }
+@media only screen and (min-width: 700px) {
+  #js-right,
+  #js-wrong,
+  #js-startScreen,
+  #js-finalScore,
+  #js-questionsForm {
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .counter {
+    font-size: 1.4em;
+  }
+  #js-wrong h2 {
+    font-size: 1.4em;
+  }
+  #js-wrong p {
+    font-size: 1.4em;
+  }
+  #js-finalScore h2 {
+    font-size: 1.4em;
+  }
+  #js-finalScore p {
+    font-size: 1.4em;
+  }
+  #js-questionsForm legend {
+    font-size: 1.3em;
+  }
+  #questionCont label {
+    font-size: 1.3em;
+  }
 }
